tirado a barra na url da imagem seção

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,48 +1,100 @@
 @media (max-width: 991.98px) {
-    .secao-com-texto {
-      padding: 153px 25px;
-    }
-    .secao-com-texto p,
-    .secao-com-texto.onde-estamos p {
-      width: 100%;
-    }
+  .secao-com-texto {
+    padding: 153px 25px;
   }
-  
-  @media (max-width: 767.98px) {
+  .secao-com-texto p,
+  .secao-com-texto.onde-estamos p {
+    width: 100%;
   }
-  
-  @media (max-width: 425px) {
-    .cabecalho .logo {
-      display: block;
-      margin: 0 auto;
-    }
-  
-    .cabecalho nav {
-      position: static;
-      text-align: center;
-      width: 100%;
-    }
-  
-    .cabecalho ul li {
-      display: block;
-      padding: 14px;
-    }
-  
-    .cabecalho nav ul li a {
-      width: 100%;
-      display: block;
-    }
-  
-    .painel h2 {
-      font-size: 2.5rem;
-    }
-  
-    .secao-com-texto h2 {
-      font-size: 3rem;
-    }
-  
-    .secao-com-texto p,
-    .secao-com-texto.onde-estamos p {
-      font-size: 2rem;
-    }
+}
+
+@media (max-width: 767.98px) {
+  .secao-contato .texto {
+    width: 100%;
+    position: absolute;
+    text-align: center;
+    left: auto;
+    right: auto;
   }
+
+  .secao-contato .texto h2 {
+    text-align: center;
+    font-size: 4.5rem;
+  }
+
+  .secao-contato .texto address {
+    font-size: 2rem;
+  }
+  .rodape {
+    height: 643px;
+    width: 100%;
+}
+  .rodape .logo {
+    display: block;
+    margin: 0 auto;
+  }
+  .rodape .redes-sociais a{
+
+  }
+
+  .rodape ul li {
+    display: block;
+    padding: 14px;
+
+  }
+
+  .rodape ul {
+    position: absolute;
+    margin: 0 auto;
+    top: 240px;
+  }
+  .rodape ul li a {
+    font-size: 2rem;
+  }
+
+  .rodape .conteudo-de-baixo .copyright {
+    position: absolute;
+    bottom: 72px;
+    left: 130px;
+    width: 100%;
+   
+
+  }
+}
+@media (max-width: 425px) {
+  .cabecalho .logo {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .cabecalho nav {
+    position: static;
+    text-align: center;
+    width: 100%;
+  }
+
+  .cabecalho ul li {
+    display: block;
+    padding: 14px;
+  }
+
+  .cabecalho nav ul li a {
+    width: 100%;
+    display: block;
+  }
+
+  .painel h2 {
+    font-size: 2.5rem;
+  }
+
+  .secao-com-texto h2 {
+    font-size: 3rem;
+  }
+
+  .secao-com-texto p,
+  .secao-com-texto.onde-estamos p {
+    font-size: 2rem;
+  }
+
+}
+
