--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .cabecalho .logo {
-  background: url("./src/images/logo.jpg") center center no-repeat;
+  background: url("../images/logo.jpg") center center no-repeat;
   width: 85px;
   height: 85px;
   display: inline-block;
@@ -41,7 +41,7 @@ body {
 }
 
 .painel {
-  background: url("./src/images/painel.jpg") center center no-repeat;
+  background: url("../images/painel.jpg") center center no-repeat;
   height: 600px;
 }
 
@@ -89,29 +89,29 @@ body {
 }
 
 .secao-ladrilhos .grande {
-  background: url("./src/images/4.jpg") center center no-repeat;
+  background: url("../images/4.jpg") center center no-repeat;
   height: 600px;
   width: 50%;
 }
 .secao-ladrilhos .grao {
-  background: url("./src/images/2.jpg") center center no-repeat;
+  background: url("../images/3.jpg") center center no-repeat;
   height: 300px;
   width: 25%;
 }
 
 .secao-ladrilhos .pequena {
-  background: url("./src/images/1.jpg") center center no-repeat;
+  background: url("../images/2.jpg") center center no-repeat;
   height: 300px;
   width: 25%;
 }
 .secao-ladrilhos .media {
-  background: url("./src/images/1.jpg") center center no-repeat;
+  background: url("../images/1.jpg") center center no-repeat;
   height: 300px;
   width: 50%;
 }
 
 .secao-contato {
-  background: url("./src/images/fundo-contato.jpg") center center no-repeat;
+  background: url("../images/fundo-contato.jpg") center center no-repeat;
   height: 600px;
   width: 100%;
   color: white;
@@ -135,33 +135,27 @@ body {
   left: 50%;
 }
 
-.rodape .logo {
-  display: inline-block;
-}
-
 .rodape {
-  background: url("./src/images/fundo-rodape.jpg") center center no-repeat;
+  background: url("../images/fundo-rodape.jpg") center center no-repeat;
   padding: 35px 30px;
   background-size: cover;
-  height: 211px;
-  position: relative;
+}
+
+.rodape .logo {
+  display: inline-block;
+  margin: 0 auto;
 }
 
 .rodape ul {
   float: right;
-  position: absolute;
-  top: 72px;
-  right: 29px;
-  bottom: 119px;
+  margin-top: 30px;
 }
 
 .rodape ul li {
   display: inline-block;
-  padding: 42px;
+  padding: 15px;
 }
 .rodape ul li a {
-  font-size: 16px;
-  font-weight: 400;
   color: white;
 }
 .rodape ul li a:hover {
@@ -172,7 +166,7 @@ body {
   font-size: 15px;
   font-weight: 400;
   color: white;
-  margin-bottom: 32px;
+  margin-top: 40px;
 }
 
 .rodape .redes-sociais .facebook,
@@ -183,16 +177,10 @@ body {
 }
 
 .rodape .redes-sociais {
-  position: absolute;
-  top: 159px;
-  right: 32px;
+ float: right;
+ clear: both;
 }
 
 .rodape .conteudo-de-baixo {
   margin-top: 40px;
-}
-
-.rodape .conteudo-de-baixo .redes-sociais a:hover {
-  width: 30px;
-  height: 30px;
 }
