--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,85 +1,128 @@
-@media (max-width: 991.98px) {
+/* Medium devices (tablets, less than 992px) */
+@media (max-width: 992px) {
   .secao-com-texto {
     padding: 153px 25px;
   }
+
   .secao-com-texto p,
   .secao-com-texto.onde-estamos p {
     width: 100%;
   }
 }
 
-@media (max-width: 767.98px) {
+/* Small devices (landscape phones, less than 768px) */
+@media (max-width: 768px) {
+  .secao-contato {
+    background-image: none;
+    background-color: #D3AE71;
+  }
   .secao-contato .texto {
     width: 100%;
-    position: absolute;
+    position: relative;
     text-align: center;
-    left: auto;
-    right: auto;
+    top: 50%;
+    left:0;
+    transform: translateY(-50%);
   }
-
-  .secao-contato .texto h2 {
-    text-align: center;
-    font-size: 4.5rem;
-  }
-
+   .secao-contato  h2 {
+     margin-bottom: 51px;
+   }
   .secao-contato .texto address {
     font-size: 2rem;
   }
-  .rodape {
-    width: 100%;
 }
+  
+  @media (max-width: 720px) {
+  .secao-ladrilhos .grande,
+  .secao-ladrilhos .media {
+    width: 100%;
+  }
+  .secao-ladrilhos .pequena,
+  .secao-ladrilhos .grao {
+    width: 50%;
+  }
+
+  .rodape {
+    background-image: none;
+    background-color: #000000;
+    text-align: center;
+  }
+
   .rodape .logo {
     display: block;
-    margin: 0 auto;
+    margin-bottom: 122px;
+    
+  }
+  .rodape ul {
+    display: block;
+    width: 100%;
+    margin-bottom: 122px;
   }
 
   .rodape ul li {
     display: block;
-    padding: 14px;
-
+    padding: 13px;
   }
 
-  .rodape ul {
-   text-align: center;
-    margin: 0 auto;
-  
-  }
   .rodape ul li a {
-    font-size: 2rem;
+    width: 100%;
+    display: block;
   }
 
-  .rodape .conteudo-de-baixo div {
-    display: block;
-    position: absolute;
-    bottom: 72px;
-    left: 130px;
-    width: 100%;
-   
+  .rodape .redes-sociais {
+    float: none;
+    margin-bottom: 28px;
+  }
 
+  .rodape .copyright {
+    margin-top: 28px;
+    margin-bottom: 37px;
   }
 }
+
 @media (max-width: 425px) {
-  .cabecalho .logo  {
+  .secao-ladrilhos .grande,
+  .secao-ladrilhos .media {
+    width: 100%;
+  }
+  .secao-ladrilhos .pequena,
+  .secao-ladrilhos .grao {
+    width: 50%;
+  }
+}
+@media (max-width: 375px) {
+  .secao-ladrilhos .grande,
+  .secao-ladrilhos .media {
+    width: 100%;
+  }
+  .secao-ladrilhos .pequena,
+  .secao-ladrilhos .grao {
+    width: 100%;
+  }
+}
+
+@media (max-width: 426px) {
+  .cabecalho .logo {
     display: block;
     margin: 0 auto;
   }
-
+  
   .cabecalho nav {
     position: static;
     text-align: center;
     width: 100%;
   }
 
-  .cabecalho ul li {
+  .cabecalho nav ul li {
     display: block;
     padding: 14px;
   }
-
+  
   .cabecalho nav ul li a {
     width: 100%;
     display: block;
   }
-
+  
   .painel h2 {
     font-size: 2.5rem;
   }
@@ -87,11 +130,9 @@
   .secao-com-texto h2 {
     font-size: 3rem;
   }
-
+  
   .secao-com-texto p,
   .secao-com-texto.onde-estamos p {
     font-size: 2rem;
   }
-
 }
-
